--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 .idea*
 .DS_Store
 .venv*
+# Do not include binary files and data files. While git does not have a definition for "binary files", it can check by giving match patterns and exclude specific files.
